--- a/resources/css/frontend_index.scss
+++ b/resources/css/frontend_index.scss
@@ -15,6 +15,11 @@ h1
 	margin: 20px;
 }
 
+.search_interactive
+{
+    text-align: center;
+}
+
 .cars
 {
 	text-align: center;
@@ -110,6 +115,6 @@ body > header
     transform: scale(0.9); /* określa jak div ma się przetransformować */
 /*
     -webkit-transform: scale(0.9);
-    -ms-transform: scale(0.9); 
+    -ms-transform: scale(0.9);
 */
 }
