Commit1_15_10_2020_naprawione_style_css_i_js_dziala_na_obu_przegladarkach

--- a/public/css/fontello-codes.css
+++ b/public/css/fontello-codes.css
@@ -1,14 +1,3 @@
-@charset "UTF-8";
 
-.icon-home-outline:before {
-  content: "\E800";
-}
-
-/* '' */
-
-.icon-up-circled2:before {
-  content: "\E802";
-}
-
-/* '' */
-
+.icon-home-outline:before { content: '\e800'; } /* '' */
+.icon-up-circled2:before { content: '\e802'; } /* '' */
