--- a/public/css/fontello-ie7-codes.css
+++ b/public/css/fontello-ie7-codes.css
@@ -1,8 +1,3 @@
-.icon-home-outline {
-  *zoom: expression( this.runtimeStyle["zoom"] = "1", this.innerHTML = "&#xe800;&nbsp;");
-}
 
-.icon-up-circled2 {
-  *zoom: expression( this.runtimeStyle["zoom"] = "1", this.innerHTML = "&#xe802;&nbsp;");
-}
-
+.icon-home-outline { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xe800;&nbsp;'); }
+.icon-up-circled2 { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xe802;&nbsp;'); }
