Commit1_15_10_2020_frontend_index_w_trakcie_roboty

--- a/public/css/frontend_index.css
+++ b/public/css/frontend_index.css
@@ -20,6 +20,13 @@ h1 {
   text-align: center;
 }
 
+/*stylzacja i wysrodkowanie formularza*/
+.form_interactive
+{
+    width: 40%;
+    display: inline-block;
+}
+
 .cars {
   text-align: center;
 }
