--- a/public/css/backend_index.css
+++ b/public/css/backend_index.css
@@ -185,3 +185,24 @@ body > header {
     text-align: center;
     list-style-position: inside;
 }
+
+/* -------------------------------------------do BACKENDU -------------------- */
+
+@media (min-width: 768px) .left_sidebar {
+    position: fixed;
+    top: 51px;
+    bottom: 0;
+    left: 0;
+    z-index: 1000;
+    display: block;
+    padding: 20px;
+    overflow-x: hidden;
+    overflow-y: auto;
+    background-color: #efefef;
+    border-right: 1px solid #eeeeee;
+}
+
+.left_sidebar
+{
+    display: none;
+}
