--- a/public/css/frontend_index.css
+++ b/public/css/frontend_index.css
@@ -185,3 +185,10 @@ body > header {
     text-align: center;
     list-style-position: inside;
 }
+
+/* car_search.blade.php - wyszukane samochody */
+.car_details
+{
+    padding: 10px;
+    color: black;
+}
