Commit1_04_11_2020_zrobiona_wyszukiwarka_na_frontend

--- a/public/css/frontend_index.css
+++ b/public/css/frontend_index.css
@@ -191,4 +191,11 @@ body > header {
 {
     padding: 10px;
     color: black;
+    overflow: hidden;
+}
+
+.img-thumbnail
+{
+    background-color: #CAC5C4;
+    margin-bottom: 20px;
 }
