Commit1_09_11_2020_zrobione_wyswietlanie_rezerwacji_w_datepicker_na_car_reservation_blade

--- a/public/css/frontend_index.css
+++ b/public/css/frontend_index.css
@@ -199,3 +199,16 @@ body > header {
     background-color: #CAC5C4;
     margin-bottom: 20px;
 }
+
+/* tabela na car_reservation_blade */
+.table
+{
+    color: white;
+}
+
+/* datepicker na car_reservation_blade. Styl wyswietli na czerwono niedostepny dzien */
+.niedostepny_dzien
+{
+    text-decoration: line-through;
+    background-color: red;
+}
