Commit1_27_11_2020_zrobione_profil_uzytkownika

--- a/public/css/backend_index.css
+++ b/public/css/backend_index.css
@@ -256,4 +256,11 @@ body > header {
     color: white;
 }
 
+/* farmularz profilu admin panel  */
+.form_profile
+{
+    text-align: left !important;
+}
+
+
 
